--- a/C4-L03.qmd
+++ b/C4-L03.qmd
@@ -21,6 +21,10 @@ fig-caption: Notes about ... Bayesian Statistics
 title-block-banner: images/banner_deep.jpg
 ---
 
+<!-- 
+The challange in taking notes in this courses is that the instructors speak out the maths as they go along. I supply the math but I want to extract the non-math parts and put them in the right place. 
+-->
+
 [Normal Dynamic Linear Models (NDLMs) are defined and illustrated in this module using several examples Model building based on the forecast function via the superposition principle is explained. Methods for Bayesian filtering, smoothing and forecasting for NDLMs in the case of known observational variances and known system covariance matrices are discussed and illustrated.]{.mark}.
 
 The Normal Dynamic Linear Model (DLM) is covered  [@prado2023time pp. 117-144]
@@ -66,7 +70,7 @@ As far as I cen tell NDLMs are just DLM with their errors distributed normally a
 
 ![the forecast function](images/m3_0003.png){.column-margin width="250px" group="slides"}
 
-
+<!--
 ::: {.callout-caution collapse="true"}
 
 ### Hard to follow :weary:
@@ -94,6 +98,7 @@ In @prado2023time we quickly get a large number of mathematically concise format
 - The state space representation here is omitted. The $F$ vector or matrix is not really motivates as a latent state space representation.
 
 :::
+-->
 
 In this module, [we will motivate and develop a class of models suitable for for analyzing and forecasting **non-stationary time series** called  **normal dynamic linear models** . We will talk about Bayesian inference and forecasting within this class of models and describe model building as well]{.mark}. 
 
@@ -130,7 +135,7 @@ $$
 $$ {#eq-nldm-mean-variance}
 
 
-### A model with changing means (Random walk)
+### A Random walk model with a slowly changing mean
 
 [Next we incorporate some temporal structure, we allow the expected value of the time series, to change over time. To can achieve this, by update the model definition with a $\mu_t$ where the index indicates that it can change at every time step. And let us keep the noise unchanged. i.e. we set it to $\mu_t \in N(0,\nu)$.]{.mark}  
 
@@ -138,7 +143,7 @@ We get the following model:
 
 $$
 y_t = \mu_t + \nu_t \quad \nu_t \overset{\text{iid}}{\sim} N(0, V) \qquad \text{(radom walk model)}
-$$ {#eq-nldm-model-random-walk}
+$$ {#eq-NDLM-model-random-walk}
 
 To complete this we need to also decide how to incorporate the the changes over time in the parameter $\mu_t$. We might consider different options but we should pick the simplest possible to start with. One option is to assume that the expected value of $\mu_t$ is just the expected value of $\mu_{t-1}$ plus some noise. 
 
@@ -152,7 +157,7 @@ $$
 y_t &= \mu_t + \nu_t  &\nu_t &\overset{\text{iid}}{\sim} N(0, V)  & \text{(Observation eq.)} \\
 \mu_t &= \mu_{t-1} + \omega_t  &\omega_t &\overset{\text{iid}}{\sim} N(0, W) & \text{(System/evolution eq.)}
 \end{aligned}
-$$ {#eq-random-walk-model-hierarchial}
+$$ {#eq-random-walk-model-hierarchical}
 
 
 With this model, what we are assuming is that the mean level of the series is changing over time. 
@@ -1394,6 +1399,8 @@ $$
 ## R-code: Smoothing in the NDLM, Example (Reading)
 
 ```{r}
+#| label: lst-smoothing-in-the-NDLM
+
 #################################################
 ##### Univariate DLM: Known, constant variances
 #################################################
@@ -1944,7 +1951,6 @@ lines(index_filt,results_filtered_dlm$m[-1],col='red',lwd=2)
 lines(index_filt,results_smoothed_dlm$s[-1],col='blue',lwd=2)
 legend(1880,577, legend=c("filtered", "smoothed"),
        col=c("red", "blue"), lty=1, cex=0.8)
-
 ```
 
 
@@ -1957,7 +1963,6 @@ $W=1$ to $W=0.01$ . Plot and upload the new means of the filtered and smoothed r
 
 ::: {.callout-info}
 
-
 ### Grading Criteria
 
 Peer reviewers will be asked to check whether 
@@ -1969,6 +1974,6 @@ To receive full credit for this assignment you will have to grade the assignment
 
 :::
 
-# Quiz - NDLM, Part I: Review
+## Quiz - NDLM, Part I: Review
 
 This is omitted due to the Coursera honor code.
