--- a/C4-L03.qmd
+++ b/C4-L03.qmd
@@ -959,40 +959,116 @@ Omitted due to Coursera honor code
 
 ![slide 1](images/m3_0042.png){.column-margin width="250px" group="slides"}
 
+[We will now delve into Bayesian inference in the case of the normal dynamic linear model where both the observational variance and the system variance are known. We will talk about filtering equations, smoothing equations and also forecasting in this setting using Bayesian approach.].{.mark}
+
+
+:::: {#fig-sean-law .column-margin }
+{{< video https://www.youtube.com/watch?v=0O6dlq6a4rA&ab_channel=SciPy >}}
+
+Sean Law - STUMPY: Modern Time Series Analysis with Matrix Profiles 
+::::
+
+::: {.callout-note collapse='true'}
+
+### Reality check {.unumbered}
+
+
+The next bit tells us what we know and then what we want to use baysian inference for (i.e. filtering smoothing, of the parameters $\theta_t$ given the data and forecasting $y_t$ based on that)
+
+I kind of got annoyed that we know everything I want to infer $F,G,V,W$ and Priors $M,C$. But that not the process with time series analysis. 
+
+However, at some point I saw a talk about [STUMPY](https://stumpy.readthedocs.io/en/latest/Tutorial_STUMPY_Basics.html) which does many cool time series stuff in python. And the speaker talks about all the different data science and DSP 'magic' one can use, but also about the problems comparing lots of times series or time series with lots of data. 
+
+Prado kind of suggests that a time series has around 300 data points. And the DLM framework while flexible assumes that you will know the actual form of the model and priors. I suppose they expect that you will use some other non-bayesian tools to do this as we haven't really covered this in her course. 
+
+Splitting a TS into trend periods and a stationary residual isn't too tricky in R. Getting the inverse periods is then possible. Doing regression on the residuals is also possible. So if we have done all that we should be able to write down an NDLM based on all that we learned. And this will allow us to do filtering, smoothing and forecasting with error estimates.
+
+:::
+
+
+So recall we are working with a model that looks like this.
+
+$$
+\begin{aligned}
+y_t &= F_t' \theta_t + \nu_t, \quad \nu_t \sim N(0, v_t), \\
+\theta_t &= G_t \theta_{t-1} + \omega_t, \quad \omega_t \sim N(0, W_t), 
+\end{aligned}
+$$ {#eq-generic-NDLM}
+
+We will assume that $\nu_t, \omega_t F_t, G_t$ are known for all $t$.
+
+We are interested in performing Bayesian inference in this setting and we talked about different kinds of distributions. 
+
+- One is the **filtering distribution** that allows us to update the distribution of $\theta_t$ as we receive observations and information over time. 
+- The other one is **smoothing equations** that allows us to just revisit the past once we have observed a chunk of data. 
+
+In a Bayesian setting, you have to set *a prior distribution*. [We will work with the prior distribution that is conjugate.]{.mark} 
+
+In this case we have to begin with a distribution at time zero for $\theta_0$. So before we have seen any data at all, I have this prior distribution. 
+
+We also assume a prior distribution of the form 
+
+$$
+(\theta_0 \mid D_0) \sim N(m_0, C_0)
+$$ {#eq-normal-prior-for-the-parameters-given-the-data}
+
+Here $\mathcal{D}_0$ stands for the information that I have before collecting any data. And we are assuming $\theta_0$ follows a normal distribution with $m_0$ mean and variance covariance matrix $C_0$. So these are also specified when you're working with this model. 
+So we assume that this $m_0$ and $C_0$ is known.
+
+$$
+(\theta_{t-1} \mid D_{t-1}) \sim N(m_{t-1}, C_{t-1}).
+$$ {#eq-filtering-assumption-1}
+
+We assume that this the filtering distribution follows this normal distribution based on @eq-normal-prior-for-the-parameters-given-the-data being conjugate of the normal and the linearity of @eq-generic-NDLM which aligns with maintaining the normal form during the linear updates taking place at each time step.
+
+Then, we can obtain the following distributions:
+
+1. Prior at Time $t$
+
+$$
+(\theta_t \mid D_{t-1}) \sim N(a_t, R_t),
+$$
+
+with
+
+$$
+a_t = G_t m_{t-1} \qquad R_t = G_t C_{t-1} G_t' + W_t.
+$$
+
+2. One-Step Forecast
+
+$$
+(y_t \mid D_{t-1}) \sim N(f_t, q_t),
+$$
+
+with
+
+$$
+f_t = F_t' a_t, \quad q_t = F_t' R_t F_t + v_t.
+$$
+
+3. Posterior at Time $t:$ $(\theta_t \mid \mathcal{D}_t) \sim N(m_t, C_t)$ with
+
+$$
+\begin{aligned}
+m_t &= a_t + R_t F_t q_t^{-1} (y_t - f_t), \\
+C_t &= R_t - R_t F_t q_t^{-1} F_t' R_t.
+\end{aligned}
+$$
+
+Now, denoting $e_t = (y_t - f_t)$ and $A_t = R_t F_t q_t^{-1}$, we can rewrite the equations above as:
+
+$$
+\begin{aligned}
+m_t &= a_t + A_t e_t, \\
+C_t &= R_t - A_t q_t A_t'
+\end{aligned}
+$$
+
 ::: {.callout-note collapse="true"}
 ## Video Transcript
 
-[MUSIC] I will now discuss Bayesian inference in the case of the normal dynamic linear model where both the observational variance and the system variance are known. We will talk about filtering equations, smoothing equations and also forecasting in this
-setting using Bayesian approach. So recall we are working with a model that looks like this. And then this is my first equation,
-the observation equation and I have a system equation that looks like this. We are going to assume that Vt and
-Wt are known for every t. And we also know what the Ft's and the Gt's are here. So the response is a uni-dimensional
-yt and then I have, say, theta t is a vector of a given dimension, depending on the structure of the model. So we are interested in performing Bayesian inference in this setting and we talked about different kinds of distributions. One is the filtering distribution that allows us to update the distribution of theta_t as we receive observations and information over time. The other one is smoothing
-equations that allows us to just revisit the past once we have observed a chunk of data. So I will be talking about those and
-also smoothing. In a Bayesian setting, you have to set a prior distribution. We will work with the prior
-distribution that is conjugate. In this case I have to begin with distribution at time zero. So before I know, I have seen any data
-at all, I have this prior distribution. D0 stands for the information that I have before collecting any data. And we are going to assume, That this theta0  follows a normal distribution with m0 mean and variance covariance matrix C0. So these are also specified when
-you're working with this model. So we assume that this m0 and C0 is known. 
-
-Once we have this setting using these equations, we can obtain the filtering equations. 
-
-So the first assumption is going to be that we have, a structure. 
-So for $\theta_{t -1} \mid \mathcal{D}_{t-1}$ is going to have this normal structure which is going to happen basically because we're using this conjugate prior. And because we have normal structure in the model, is going to lead to the following distribution. So the first one is the prior at time t. So if I want to think about why my distribution for the t is given the information I have up to t- 1, I can look at the equations of the model and use this second equation. And by looking at this equation, if I condition on the information I have up to t -1, I can see that, say, theta t is written as a linear function of, theta, t -1 and I have the assumption of normality here. Therefore, say, theta t going to follow a normal distribution with some mean and some variance. So now we're going to compute this mean and this variance using this equation. So if you think about the expected value of theta t, given D_{t -1}, that's just going to be Gt is a constant here. So I have my Gt and then I have expected value of theta t -1 given Gt -1 plus expect the value of this omega t. 
-
-But omega t is a zero mean, normally distributed quantity, so it's just going to be zero. Using the assumption that I have this structure, then I have that the $\mathbb{E}[\theta_t \mid \mathcal{D}_{t -1}] = G_t \times m_{t-1}$. We're going to call this quantity at, so we have here at. For the variance covariance matrix, then we just have to compute, do the same type of operation. And again, we can use this equation and see that we obtain this Gt
-variance of $\theta_{t-1} \mid \mathcal{D}_{t -1} G_t'$. And then we have now the variance of the omega, the variance of the omega is just Wt. So we have Gt, this is Ct -1 Gt transpose plus this Wt. So we can call this quantity Rt and just have the form of this prior distribution at time $t$. 
-
-I can now think about another distribution which is the distribution of $y_t \mid \mathcal{D}_{t-1}$. So this is the so called one-step ahead, Forecast, And in the one-step ahead forecast again is a similar type of structure. So now we're going to use the first equation rather than the second equation and we see that $y_t$ is written in terms of a linear function of theta t. And we have also the Gaussian in assumption here. So again the $y_t$ is going to be normally distributed, And we just have to compute the mean and
-the variance for this $y_t$. So using the first equation, we have the expected value of $y_t$ given Dt -1 is just Ft transpose expected value of theta t given Dt -1. And we computed this before, so this is, again, the expected value of theta t given
-Dt -1 is what we computed here. So this is to be Ft transpose at. And we are going to call this little ft. Then, for the variance, Again, we use this equation,
-we have this component, so we are going to get Ft transpose. Then I have the variance of
-theta t given Dt- 1 Ft plus, now we have the variance of this term, and this term,
-the observational variance is Vt. So again, this one we computed before,
-is what we have called Rt. So this gives me Ft transpose Rt, Plus Dt and I'm going to call this qt. So my final distribution, the one-step ahead forecast distribution, tells me that this follows a normal ft qt. The next equations we are going to discuss are the equations that tell me about what is
-the distribution of theta t once we incorporate the information provided by $y_t$. The next distribution is the posterior of theta t given Dt. So that's, theta t given Dt. And we can write Dt as whatever information we have at time t- 1. And the new data point with this just $y_t$. So we just want to update the distribution of theta t given that we have received this additional
-data point at time t. There are two ways of computing this distribution. One uses normal theory, the other one uses Bayes' theorem. And you obtain that the distribution of theta t given Dt is going to be a normal, with mean we
-call it mt and variance Ct. We will see how to obtain this distribution or the moments of this distribution using normal theory. >> So, again, we can write down, if we think about just combining the vector theta t with the observation
-Yt given Dt -1, right? We have information about $\theta_t \mid t-1$. That's the prior for $\theta_{ta,t}$, based on the information at t -1. And then we also computed before the one step ahead forecast distribution for $y_t| \mathcal{D}_{t -1}$. So we know that when we combine these two in a single vector, we're going to have a multivariate normal distribution and the first component is going to be at. The second component is what we have called Ft, so that's the mean. And then for the covariance matrix. We're going to have now, what goes here is just the variance of theta t given Dt -1, which we have called Rt. What goes here is the variance of $y_t \mid \mathcal{D}_{t -1}$ and we have called this qt. And now we have to compute the covariance between theta t and $y_t$, and that goes here. And the covariance between $y_t$ and theta t, which is just the transpose of that, is going to go here. So if I think about computing the covariance of $\theta_t$ and $y_t \mid \mathcal{D}_{t -1}$, I can write $y_t$ using the first equation here as a function of theta t. That's going to give us, Ft transpose theta t plus vt given Dt -1. And in this one we can see that this is going to give us basically the variance of theta t given Dt -1 and then multiplied by Ft transpose transpose which gives me the Ft. So this is going to be variance of theta t given Dt -1 times Ft. And then there is a term that combines the theta t with the noise but they are independent, so the covariance is going to be zero. So this one is simply going to be my Rt Ft, so this goes here, And what goes here is just the covariance of $y_t$ with theta t or the transpose of this. So this is going to give me Ft transpose Rt transpose, but Rt is a covariance matrix, so Rt transpose is equal to Rt. So now I have my full multivariate distribution and I can use properties of the multivariate distribution to compute the distribution of, theta_t, given $y_t$ and Dt- 1. So that's going to be a conditional distribution, I'm going to condition on the $y_t$. And when I combine $y_t$ and Dt -1 that gives me just the information up to time t. So we are interested in just finding, say, theta t given $y_t$ and Dt -1 which is the same as theta t given Dt. We partition the normal distribution in this way, so I can just think about this is the first component and then I have these different pieces in my covariance matrix. And we know from normal theory that if we have a distribution, if we have a vector that is partitioned into vectors here where they are normally distributed. And I have my mean partition here and let's say I have one component here, Then we know that if I wanted to compute the distribution of X1 conditional on X2, that's going to give me normal, let's say alpha star. And let's call this one the sigma star, where alpha star is going to be my alpha 1 plus sigma 12 inverse. And then I have $X1- alpha 2$ and then I have my sigma star. And this one gives me my sigma 11 -, 21. So this is a result from normal theory. So if I want my conditional distribution of X1 given X2 I can apply these equations. So we notice we have the same type of structure here. If I partition my vector and in theta_t and $y_t$. And now I condition on, I take the distribution of theta t conditioning on $y_t$. I'm going to have that same structure where this is normal, mt Ct. And my mt using normal theory, again, is going to be at plus, then I have this piece here, sigma 22 which gives me the qt inverse. And then I have, $y_t- f_t$. So that's my mean and my covariance matrix. It's going to be Rt- qt inverse and then I have this transpose again. So if we simplify things a bit here and we call et, it's just the error that we make when we compare $y_t$, which is the observation with the prediction, right? And then I also use the notation I call at, let's call here At Rt Ft qt inverse. Then we can write this down,
-to mean, we can write as at, Plus, And the covariance matrix. We can write it as Rt, At qt At transpose. So this gives me the posterior mean after receiving this $y_t$ observation. And you can see that you can write down the posterior mean, has this usual form of the prior plus something that relates to the error that I make with the prediction. So the $y_t$ appears there and then is weighted by this quantity that we just call at. And for the covariance structure, we are also incorporating information about the prior and what the $y_t$ observation provides. So this gives us our filtering equation for theta t given Dt. And now we can apply all these equations as we receive observations from t equals 1 all the way to capital T. If we happen to have capital T observations in the time series, we can do this filtering process and obtain these distributions as we receive information.
+{{< include _C3-L03-T05.qmd >}}
 
 :::
 
@@ -1017,7 +1093,7 @@ We are interested in finding $p(\theta_t \mid D_t)$ for all $t$. Assume that the
 
 $$
 (\theta_{t-1} \mid D_{t-1}) \sim N(m_{t-1}, C_{t-1}).
-$$
+$$ {#eq-filtering}
 
 Then, we can obtain the following:
 
