better math in general polynomial model section

--- a/C4-L03.qmd
+++ b/C4-L03.qmd
@@ -503,14 +503,15 @@ L_p = \begin{pmatrix}
 \end{pmatrix}
 $$ {#eq-triangular-form-dynamics}
 
-And in this type of model, the forecast function is going to have order $p-1$.
-So the parameter vector is going to have dimension $p$. So you're going to have $\theta_t =  \theta_{t1:p}$.
+And in this type of model, the forecast function is going to have order $p-1$. So the parameter vector is going to have dimension $p$. So you're going to have $\theta_t =  \theta_{t1:p}$.
 
-Your F matrix is going to be constant if I write it as a row vector. $F'$ is going to be a p-dimensional vector with the one in the first entry and zeros everywhere else.
+Our $F$ matrix is going to be constant, if I write it as a row vector. $F'$ is going to be a p-dimensional vector with the one in the first entry and zeros everywhere else.
 
-My G matrix is going to have this form and there is different parameterization of this model and I will talk a little bit about this. But one way to parameterize the model is something that looks like this. So you have ones in the diagonal of the matrix, the matrix is going to be a p by p has to be the dimension of the p compatible with the dimension of the state vector. And then you have zeros's below the diagonal above that set of ones that are also ones above the diagonal. So this matrix G is what we call a Jordan block of dimension p of 1. So here 1 is the number that appears in the diagonal. And then I have a p Ip matrix, I have ones in the upper diagonal part. So this is the form of the model, so once again I have the F the G, and the wt. I have my model. The forecast function in this case again can be written as F transposed G to the power of h. And when you simplify times expected value of theta_t, given Dt. Once you simplify those functions you get something that is a polynomial of order p-1 in h. So I just can write this down as kt constant.
+My $G$ matrix is going to have this form and there is different parameterization of this model and I will talk a little bit about this. But one way to parameterize the model is something that looks like this. So you have ones in the diagonal of the matrix, the matrix is going to be a p by p has to be the dimension of the p compatible with the dimension of the state vector. And then you have zeros's below the diagonal above that set of ones that are also ones above the diagonal. So this matrix $G$ is what we call a Jordan block of dimension p of 1. So here 1 is the number that appears in the diagonal. And then I have a p $I_p$ matrix, I have ones in the upper diagonal part. So this is the form of the model, so once again I have the $F$ the $G$, and the $W_t$. I have my model. The forecast function in this case again can be written as $F' G^h \mathbb{E}[\theta_t \mid \mathcal{D}_t]$. And when you simplify times expected value of $\theta_t$, given $D_t$. Once you simplify those functions you get something that is a polynomial of order $p-1$ in $h$. So I just can write this down as $k_t$ constant.
 
-Plus k_t1 h + k_t p- 1, h to the p-1, so that's my forecast function. There is an alternative parameterization of this model that has the same F and the same algebraic form of the forecast function, the same form of the forecast function. But instead of having this G matrix, it has a matrix that has ones in the diagonal and ones everywhere above the diagonal. So it's an upper triangular matrix with ones in the diagonal and above the diagonal. That's a different parameterization of the same model is going to have the same general form of the forecast function is a different parameterization. So again, you can consider the way you think about these models is you think what kind of forecast function I want to have for my future? What is the type of predictions that I expect to have in my model? And if they look like a linear trend, I use a second order polynomial. If it looks like a quadratic trend in the forecast then I would use 3rd order polynomial model representation.
+Plus $k_{t,1} h + k_{t, p-1} h^{p-1}$, so that's my forecast function. There is an alternative parameterization of this model that has the same $F$ and the same algebraic form of the forecast function, the same form of the forecast function. But instead of having this $G$ matrix, it has a matrix that has ones in the diagonal and ones everywhere above the diagonal. So it's an upper triangular matrix with ones in the diagonal and above the diagonal. That's a different parameterization of the same model is going to have the same general form of the forecast function is a different parameterization. 
+
+So again, you can consider the way you think about these models is you think what kind of forecast function I want to have for my future? What is the type of predictions that I expect to have in my model? And if they look like a linear trend, I use a second order polynomial. If it looks like a quadratic trend in the forecast then I would use 3rd order polynomial model representation.
 
 ::: {.callout-note collapse="true"}
 ## Video Transcript
@@ -538,9 +539,9 @@ In this case, we have:
 
 $\theta_t = \mu_t \quad \forall t$
 
-$F_t = 1 \quad \forall t$, 
-
-$G_t = 1 \quad \forall t$, 
+$$
+F_t = 1 \quad \forall t \qquad G_t = 1 \quad \forall t
+$$
 
 resulting in:
 
@@ -665,8 +666,8 @@ $$
 $$
 \begin{aligned}
 y_t &= \beta_{t,0} + \beta_{t,1}x_t + ν_t \\
-\beta_{t,0} &= \beta_{t−1,0} + ω_{t,0} \\
-\beta_{t,1} &= \beta_{t−1,1} + ω_{t,1}
+\beta_{t,0} &= \beta_{t−1,0} + \omega_{t,0} \\
+\beta_{t,1} &= \beta_{t−1,1} + \omega_{t,1}
 \end{aligned}
 $$ {#eq-simple-dynamic-regression}
 
@@ -678,14 +679,14 @@ $$
 f_t(h) = k_{t,0} + k_{t,1}x_{t+h}
 $$ {#eq-simple-dynamic-regression-forecast-function}
 
-where $k_{t,0} = E(\beta_{t,0} \mid \mathcal{D}_t)$ and $k_{t,1} = E(\beta_{t,1} \mid \mathcal{D}_t)$.
+where $k_{t,0} = \mathbb{E}[\beta_{t,0} \mid \mathcal{D}_t]$ and $k_{t,1} = \mathbb{E}[\beta_{t,1} \mid \mathcal{D}_t]$.
 
 ### General dynamic regression
 
 $$
 \begin{aligned}
 y_t &= \beta_{t,0} + \beta_{t,1}x_{t,1} + \ldots \beta_{t,M} x_{t,M} + ν_t \\
-\beta_{t,m} &= \beta_{t−1,m} + ω_{t,m,} & m = 0 : M.
+\beta_{t,m} &= \beta_{t−1,m} + \omega_{t,m,} & m = 0 : M.
 \end{aligned}
 $$ {#eq-regression-in-short-form}
 
@@ -701,7 +702,7 @@ A particular case is of dynamic regressions is the case of time-varying auto-reg
 $$
 \begin{aligned}
 y_t &= φ_{t,1}y_{t−1} + φ_{t,2}y_{t−2} + \ldots + φ_{t,p} y_{t−p} + ν_t,\\
-φ_{t,m} &= φ_{t−1,m} + ω_{t,m,} & m = 1 : p
+φ_{t,m} &= φ_{t−1,m} + \omega_{t,m,} & m = 1 : p
 \end{aligned}
 $$ {#eq-tvar}
 
