fixed NDLM and other typos

--- a/C4-L03.qmd
+++ b/C4-L03.qmd
@@ -22,7 +22,7 @@ title-block-banner: images/banner_deep.jpg
 ---
 
 <!-- 
-The challange in taking notes in this courses is that the instructors speak out the maths as they go along. I supply the math but I want to extract the non-math parts and put them in the right place. 
+The challenge in taking notes in this courses is that the instructors speak out the maths as they go along. I supply the math but I want to extract the non-math parts and put them in the right place. 
 -->
 
 [Normal Dynamic Linear Models (NDLMs) are defined and illustrated in this module using several examples Model building based on the forecast function via the superposition principle is explained. Methods for Bayesian filtering, smoothing and forecasting for NDLMs in the case of known observational variances and known system covariance matrices are discussed and illustrated.]{.mark}.
@@ -53,7 +53,7 @@ This approach is Bayesian in that we draw our parameters from a multivariate nor
 Additionally we have a number of Bayesian quantities that can be derived from the model, such as 
 
 - the **filtering distribution** that estimates the current state $p(\theta_t \mid \mathcal{D}_t)$, 
-- the *forecasting distribution** - to predict future observation: $p(y_{t+h} \mid \mathcal{D}_t)$, 
+- the **forecasting distribution** - to predict future observation: $p(y_{t+h} \mid \mathcal{D}_t)$, 
 - the **smoothing distribution** - retrospective estimate of past state: $p(\theta_t \mid \mathcal{D}_{T})\quad t<T$ and 
 - the **forecast function** when $F_t=F$ and $\mathbf{G}_t=\mathbf{G}$ $f_t(h)=\mathbb{E}[y_{t+h} \mid \mathcal{D}_{T}] = F'G^h \mathbb{E}[\theta_{t} \mid \mathcal{D}_{T}]$ 
 - the usual credible intervals for forecasts and parameter estimates.
@@ -64,9 +64,9 @@ As far as I cen tell NDLMs are just DLM with their errors distributed normally a
 
 ## NDLM Definition (Video)
 
-![NLDM Motivation](images/m3_0001.png){.column-margin width="250px" group="slides"}
+![NDLM Motivation](images/m3_0001.png){.column-margin width="250px" group="slides"}
 
-![NLDM general form](images/m3_0002.png){.column-margin width="250px" group="slides"}
+![NDLM general form](images/m3_0002.png){.column-margin width="250px" group="slides"}
 
 ![the forecast function](images/m3_0003.png){.column-margin width="250px" group="slides"}
 
@@ -119,7 +119,7 @@ where:
 If we plot this model we might see the following graph:
 
 ```{r}
-#| label: fig-nldm-white-noise
+#| label: fig-NDLM-white-noise
 set.seed(123)
 n <- 100
 V <- 1
@@ -132,7 +132,7 @@ For this model the mean of the time series is $\mu$ will be the the expected val
 
 $$
 \mathbb{E}[y_t] = \mu \qquad \text{and} \qquad \mathbb{V}ar[y_t] = \nu \qquad
-$$ {#eq-nldm-mean-variance}
+$$ {#eq-NDLM-mean-variance}
 
 
 ### A Random walk model with a slowly changing mean
@@ -183,7 +183,7 @@ $$\begin{aligned}
 y_t &= \vec{F}_t' \vec{\theta}_t   + \nu_t && \nu_t \overset{\text{iid}}{\sim} N(0, V_t) && \text{(obs)} \\
 \vec{\theta}_t &= G_t \vec{\theta}_{t-1} + \vec{\omega}_t && \vec{\omega}_t \overset{\text{iid}}{\sim} N(0, W_t) && \text{(system)}
 \end{aligned}
-$$ {#eq-nldm-general-form}
+$$ {#eq-NDLM-general-form}
 
 Where:
 
@@ -389,7 +389,7 @@ $$\begin{aligned}
   \theta_{t,1} &= \theta_{t-1,1} + \theta_{t-1,2} + \omega_{t,1} \qquad &\omega_{t,1} &\overset{\text{iid}}{\sim} N(0, w_{t,11}) \\
   \theta_{t,2} &= \theta_{t-1,2} + \omega_{t,2} \qquad &\omega_{t,2} &\overset{\text{iid}}{\sim} N(0, w_{t,22})
 \end{aligned}
-$$ {#eq-nldm-2-order-polynomial-model}
+$$ {#eq-NDLM-2-order-polynomial-model}
 
 So there are different ways in which you can interpret this two parameters but essentially:
 
